--- a/public/css/common.css
+++ b/public/css/common.css
@@ -926,7 +926,6 @@ a.a-gray:hover {
 }
 
 .jobtype-modal .modal-dialog .modal-content .modal-body ul.jobtype-list li {
-  padding-left: 22px;
   cursor: pointer;
 }
 
@@ -937,15 +936,19 @@ a.a-gray:hover {
 .jobtype-modal .modal-dialog .modal-content .modal-body ul.jobtype-list li a {
   height: 44px;
   line-height: 44px;
+  padding-left: 22px;
   color: #3E3A39;
   text-decoration: none;
 }
 
 .jobtype-modal .modal-dialog .modal-content .modal-body ul.jobtype-list li.selected {
-  padding-left: 18px;
   border-left: 4px solid;
   border-color: #D83856;
   background-color: #fff;
+}
+
+.jobtype-modal .modal-dialog .modal-content .modal-body ul.jobtype-list li.selected a {
+  padding-left: 18px;
 }
 
 .jobtype-modal .modal-dialog .modal-content .modal-body ul.jobtype-list ul.sec-list {
@@ -955,7 +958,7 @@ a.a-gray:hover {
 }
 
 .jobtype-modal .modal-dialog .modal-content .modal-body ul.jobtype-list ul.sec-list li {
-  padding-left: 22px;
+  padding-left: 34px;
   cursor: pointer;
 }
 
@@ -967,7 +970,7 @@ a.a-gray:hover {
 }
 
 .jobtype-modal .modal-dialog .modal-content .modal-body ul.jobtype-list ul.sec-list li.selected {
-  padding-left: 18px;
+  padding-left: 30px;
   border-left: 4px solid;
   border-color: #D83856;
   background-color: #fff;
