--- a/public/css/management.css
+++ b/public/css/management.css
@@ -1470,387 +1470,38 @@ ul.nav-sec-left > li ul.sub > li.active a {
   border-right: 1px solid #C9CACA;
 }
 
-.bg-gray {
-  background-color: #F7F8F8;
-}
-
-.border-gray {
-  border-color: #C9CACA;
-}
-
-.resume-create {
+.management-job {
   margin-top: 25px;
   padding-left: 39px;
   padding-right: 39px;
   padding-bottom: 113px;
 }
 
-.resume-create .body {
-  max-width: 1094px;
-  margin-left: 100px;
-  margin-right: 100px;
-  padding: 43px 50px 68px 50px;
-  border: 1px dashed #3E3A39;
-  border-radius: 5px;
-}
-
-.resume-create-form {
-  margin-top: 25px;
-  padding-left: 39px;
-  padding-right: 39px;
-  padding-bottom: 113px;
-}
-
-.resume-create-form .addItem {
-  width: 710px;
-  height: 45px;
-  border: 1px dashed #D83856;
-  cursor: pointer;
-  line-height: 45px;
-  color: #D83856;
-  background-color: rgba(216, 56, 86, 0.1);
-  margin-left: 60px;
-}
-
-.resume-list {
-  margin-top: 25px;
-}
-
-.resume-list .resume-list-header {
-  padding-top: 34px;
-  padding-bottom: 23px;
-  margin-left: 92px;
-  margin-right: 92px;
-  border-bottom: 1px solid #C9CACA;
-}
-
-.resume-list .resume-list-body {
-  padding-bottom: 113px;
-}
-
-.resume-list .resume-list-body .default-list {
-  padding-top: 48px;
-}
-
-.resume-show {
-  padding-top: 30px;
-}
-
-.resume-show .resume-show-body .body-title {
-  height: 54px;
-  border: 1px solid #DCDDDD;
-}
-
-.resume-show .resume-show-body .body-title .trapezoid {
-  width: 115px;
-  height: 0;
-  border-width: 0 15px 42px 15px;
-  border-style: none solid solid;
-  border-color: transparent transparent white;
-  line-height: 42px;
-  margin-bottom: 2px;
-}
-
-.resume-show .resume-show-body .body-title > .row:first-child {
-  height: 54px;
-}
-
-.resume-show .resume-show-body .body-contant {
-  border: 1px solid #DCDDDD;
-  border-top: none;
-  padding-left: 38px;
-  padding-right: 38px;
-}
-
-.resume-show .resume-show-body .body-contant > .row:first-child {
-  padding-top: 41px;
-  padding-bottom: 31px;
-}
-
-.resume-show .resume-show-body .body-contant > .row:first-child > .col:first-child > .row {
-  height: 100%;
-}
-
-.resume-show .resume-show-body .body-contant > .row:first-child > .col:nth-child(2) > .row:not(:first-child) > .col:not(:first-child):before {
-  content: "";
-  position: absolute;
-  top: 6px;
-  left: 0px;
-  background: #DCDDDD;
-  width: 1px;
-  height: 13px;
-}
-
-.resume-show .resume-show-body .body-contant > .row:first-child > .col:nth-child(2) > .row:nth-child(1) {
+.management-job .banner {
+  width: 100%;
+  max-height: 126px;
+  background-image: url(/images/nav_bg.png?9366292c4facd1d9cf329f6a5e693fdf);
+  background-size: 100% 100%;
   margin-bottom: 26px;
 }
 
-.resume-show .resume-show-body .body-contant > .row:first-child > .col:nth-child(2) > .row:nth-child(2) {
-  margin-bottom: 13px;
+.management-job .banner img {
+  max-width: 100%;
+  max-height: 100%;
 }
 
-.resume-show .resume-show-body .body-contant > .row:first-child > .col:nth-child(2) > .row:nth-child(3) {
-  margin-bottom: 21px;
-}
-
-.resume-show .resume-show-body .body-contant > .row:first-child > .col:nth-child(2) > .row:nth-child(4) {
+.management-job .body .tip > .col {
+  width: 168px;
+  margin-top: 46px;
   margin-bottom: 46px;
+  border-left: 1px solid #C9CACA;
 }
 
-.resume-show .resume-show-body .body-contant > .row:first-child > .col:nth-child(3) a:hover {
-  color: #D83856;
+.management-job .body .tip > .col:first-child {
+  border-left: none;
 }
 
-.resume-show .resume-show-body .body-contant > .row:not(:first-child) {
-  padding-top: 30px;
-  padding-bottom: 30px;
-}
-
-.resume-show .nav-remarks .nav-remarks-title {
-  height: 54px;
-  border: 1px solid #DCDDDD;
-  padding-left: 30px;
-}
-
-.resume-show .nav-remarks .nav-remarks-title > .row:first-child {
-  height: 100%;
-}
-
-.resume-show .nav-remarks .nav-remarks-contant {
-  border: 1px solid #DCDDDD;
-  border-top: none;
-  padding: 30px;
-}
-
-.resume-show .nav-ap {
-  margin-top: 25px;
-  padding-left: 30px;
-  padding-bottom: 70px;
-  border: 1px solid #DCDDDD;
-}
-
-.resume-show .nav-ap ul {
-  padding-left: 0;
-}
-
-.resume-show .nav-ap ul li {
-  height: 43px;
-  line-height: 43px;
-}
-
-.resume-show .nav-ap ul li:first-child {
-  padding-left: 30px;
-}
-
-.resume-show .nav-ap ul li:not(:first-child) {
-  padding-left: 30px;
-  border-left: 1px solid #DCDDDD;
-  cursor: pointer;
-}
-
-.resume-show .nav-ap ul li:not(:first-child):hover {
-  color: #D83856;
-  border-left-color: #D83856;
-}
-
-.resume-show .nav-ap ul li:not(:first-child) > a {
-  color: #3E3A39;
-}
-
-.resume-show .nav-ap ul li:not(:first-child) > a:hover {
-  color: #D83856;
-}
-
-.resume-show .nav-ap ul li.active {
-  color: #D83856;
-  border-left-color: #D83856;
-}
-
-.resume-show h5 {
-  border-left: 4px solid #D83856;
-  padding-left: 15px;
-  margin-bottom: 25px;
-}
-
-.resume-search {
-  margin-top: 25px;
-  padding-left: 39px;
-  padding-right: 39px;
-  padding-bottom: 113px;
-}
-
-.resume-search .resume-search-form .form-control {
-  width: 380px;
-  line-height: 30px;
-  border-radius: 5px;
-}
-
-.resume-search .resume-search-form .form-control::-webkit-input-placeholder {
-  font-size: 16px;
-  color: #B5B5B6;
-  text-align: left;
-}
-
-.resume-search .resume-search-form .form-control .input-group .append:not(:first-child) {
-  border-top-left-radius: 0;
-  border-bottom-left-radius: 0;
-}
-
-.resume-search .resume-search-form .normal {
-  width: 160px;
-}
-
-.resume-search .resume-search-form .small {
-  width: 80px;
-}
-
-.resume-search .resume-search-form .append {
-  width: 338px;
-}
-
-.resume-search .resume-search-form .resume-search-header {
-  max-height: 245px;
-  padding-top: 55px;
-  padding-bottom: 26px;
-  padding-left: 93px;
-  padding-right: 93px;
-  background-color: #F7F8F8;
-}
-
-.resume-search .resume-search-form .resume-search-header .cur-jobs {
-  width: 407px;
-  border: 1px solid #C9CACA;
-  border-radius: 5px;
-  cursor: pointer;
-}
-
-.resume-search .resume-search-form .resume-search-header .cur-jobs span:nth-child(2) {
-  max-width: 157px;
-}
-
-.resume-search .resume-search-form .resume-search-header .cur-jobs span:nth-child(3) {
-  max-width: 74px;
-}
-
-.resume-search .resume-search-form .resume-search-header .cur-jobs span:nth-child(3) {
-  max-width: 74px;
-}
-
-.resume-search .resume-search-form .resume-search-body {
-  padding-top: 31px;
-  padding-bottom: 31px;
-  padding-left: 93px;
-  padding-right: 93px;
-  background-color: white;
-}
-
-.resume-search .resume-search-form .resume-search-footer {
-  padding-bottom: 56px;
-  padding-left: 93px;
-  padding-right: 93px;
-  background-color: white;
-}
-
-.resume-list-general {
-  padding: 0 92px;
-}
-
-.resume-list-general .resume-table-general {
-  border: 1px solid rgba(137, 137, 137, 0.1);
-  border-top: none;
-}
-
-.resume-list-general .resume-table-general thead {
-  font-size: 14px;
-  font-weight: bold;
-  background-color: #F7F8F8;
-  border: none;
-}
-
-.resume-list-general .resume-table-general thead tr {
-  border: none;
-}
-
-.resume-list-general .resume-table-general thead tr th {
-  border: none;
-}
-
-.resume-list-general .resume-table-general tbody tr {
-  border: none;
-}
-
-.resume-list-general .resume-table-general tbody tr:not(:first-child) {
-  border-top: 1px solid #c9caca;
-}
-
-.resume-list-detail .resume-list-detail-item {
-  padding: 38px 92px;
-}
-
-.resume-list-detail .resume-list-detail-item:nth-child(2n) {
-  background-color: #F7F8F8;
-}
-
-.resume-list-detail .resume-list-detail-item > .row:nth-child(2) {
-  margin-top: 26px;
-}
-
-.apart > .col:not(:first-child):before {
-  content: "";
-  position: absolute;
-  top: 6px;
-  left: 0px;
-  background: #DCDDDD;
-  width: 1px;
-  height: 13px;
-}
-
-.resume-mine {
-  margin-top: 22px;
-}
-
-.resume-mine > .row:first-child > .col > div:first-child {
-  height: 100%;
-}
-
-.resume-mine .mine-nav {
-  width: 303px;
-}
-
-.resume-mine .mine-nav ul {
-  width: 100%;
-}
-
-.resume-mine .mine-nav ul > li {
-  width: 253px;
-}
-
-.resume-mine .mine-body {
-  padding: 53px 35px;
-}
-
-.resume-mine .mine-body .search .search-detail {
-  padding: 35px;
-}
-
-.resume-mine .large {
-  width: 580px;
-}
-
-.resume-mine .normal {
-  width: 185px;
-}
-
-.resume-mine .small {
-  width: 100px;
-}
-
-.resume-mine .append {
-  border-radius: 5px;
-}
-
-.resume-mine .append:not(:last-child) {
-  border-top-right-radius: 0;
-  border-bottom-right-radius: 0;
+.management-job .body .list .job-list .nav-tabs-border {
+  border-top: 1px solid #C9CACA;
 }
 
