--- a/resources/sass/resume/app.scss
+++ b/resources/sass/resume/app.scss
@@ -8,6 +8,11 @@
   border-color: $color-border-gray;
 }
 
+.resume-avatar {
+  width: 150px;
+  height: 150px;
+}
+
 .resume-create {
   margin-top: 25px;
   padding-left: 39px;
