--- a/resources/sass/common.scss
+++ b/resources/sass/common.scss
@@ -53,6 +53,14 @@ li {
 }
 
 a {
+  color: $color-n;
+
+  &:hover {
+    color: $color-n;
+  }
+}
+
+a.a-white {
   color: $color-white;
 
   &:hover {
@@ -74,6 +82,16 @@ a.a-red {
   &:hover {
     color: $color-red;
   }
+}
+
+img.avatar-user {
+  width: 80px;
+  height: 80px;
+}
+
+img.avatar-resume {
+  width: 150px;
+  height: 150px;
 }
 
 .cursor-pointer {
