--- a/public/css/user.css
+++ b/public/css/user.css
@@ -1484,107 +1484,8 @@ ul.nav-sec-left > li ul.sub > li.active a {
   border-right: 1px solid #C9CACA;
 }
 
-.management-job {
-  margin-top: 25px;
-  padding-left: 39px;
-  padding-right: 39px;
-  padding-bottom: 113px;
-}
-
-.management-job .default-table {
-  border: 1px solid #F7F8F8;
-  font-size: 14px;
-}
-
-.management-job .default-table thead {
-  background-color: #F7F8F8;
-}
-
-.management-job .default-table thead th {
-  color: #3E3A39;
-  font-weight: normal;
-  border-top: 1px solid #F7F8F8;
-  border-bottom: 1px solid #F7F8F8;
-}
-
-.management-job .default-table td {
-  vertical-align: middle;
-  border-bottom: 1px solid #F7F8F8;
-}
-
-.management-job .default-table td a:hover {
-  color: #3E3A39;
-}
-
-.management-job .banner {
-  width: 100%;
-  max-height: 126px;
-  background-image: url(/images/nav_bg.png?9366292c4facd1d9cf329f6a5e693fdf);
-  background-size: 100% 100%;
-  margin-bottom: 26px;
-}
-
-.management-job .banner img {
-  max-width: 100%;
-  max-height: 100%;
-}
-
-.management-job .body .tip > .col {
-  width: 168px;
-  margin-top: 46px;
-  margin-bottom: 46px;
-  border-left: 1px solid #C9CACA;
-}
-
-.management-job .body .tip > .col:first-child {
-  border-left: none;
-}
-
-.management-job .body .list .job-list .nav-tabs-border {
-  border-top: 1px solid #C9CACA;
-}
-
-.management-job .body .list .default-list {
-  padding-top: 0px;
-}
-
-.management-staff {
-  margin-top: 25px;
-  padding-left: 39px;
-  padding-right: 39px;
-  padding-bottom: 113px;
-}
-
-.management-staff .default-table {
-  border: 1px solid #F7F8F8;
-  font-size: 14px;
-}
-
-.management-staff .default-table thead {
-  background-color: #F7F8F8;
-}
-
-.management-staff .default-table thead th {
-  color: #3E3A39;
-  font-weight: normal;
-  border-top: 1px solid #F7F8F8;
-  border-bottom: 1px solid #F7F8F8;
-}
-
-.management-staff .default-table td {
-  vertical-align: middle;
-  border-bottom: 1px solid #F7F8F8;
-}
-
-.management-staff .default-table td a:hover {
-  color: #3E3A39;
-}
-
-.management-staff .list .job-list .nav-tabs-border {
-  border-top: 1px solid #C9CACA;
-}
-
-.management-staff .list .default-list {
-  padding-top: 0px;
+.user-avatar {
+  width: 80px;
+  height: 80px;
 }
 
