--- a/public/css/my.css
+++ b/public/css/my.css
@@ -3129,6 +3129,8 @@ ul.nav-sec-left > li ul.sub > li.active a {
 }
 
 .resume-show .nav-ap {
+  position: fixed;
+  width: 203.34px;
   margin-top: 25px;
   padding-left: 30px;
   padding-bottom: 70px;
