--- a/resources/sass/resume/app.scss
+++ b/resources/sass/resume/app.scss
@@ -188,6 +188,8 @@
   }
 
   .nav-ap {
+    position: fixed;
+    width: 203.34px;
     margin-top: 25px;
     padding-left: 30px;
     padding-bottom: 70px;
