--- a/public/css/resume.css
+++ b/public/css/resume.css
@@ -1642,6 +1642,8 @@ ul.nav-sec-left > li ul.sub > li.active a {
 }
 
 .resume-show .nav-ap {
+  position: fixed;
+  width: 203.34px;
   margin-top: 25px;
   padding-left: 30px;
   padding-bottom: 70px;
