--- a/public/css/my.css
+++ b/public/css/my.css
@@ -1358,6 +1358,10 @@ a.a-red:hover {
   border: 1px solid #ced4da;
 }
 
+.btn-light:hover {
+  background-color: white;
+}
+
 .btn-dropdown {
   height: 32px;
 }
@@ -2843,6 +2847,10 @@ a.a-red:hover {
   background-color: white;
   color: #3E3A39;
   border: 1px solid #ced4da;
+}
+
+.btn-light:hover {
+  background-color: white;
 }
 
 .btn-dropdown {
@@ -4737,6 +4745,10 @@ a.a-red:hover {
   border: 1px solid #ced4da;
 }
 
+.btn-light:hover {
+  background-color: white;
+}
+
 .btn-dropdown {
   height: 32px;
 }
@@ -6227,6 +6239,10 @@ a.a-red:hover {
   background-color: white;
   color: #3E3A39;
   border: 1px solid #ced4da;
+}
+
+.btn-light:hover {
+  background-color: white;
 }
 
 .btn-dropdown {
