--- a/resources/sass/common.scss
+++ b/resources/sass/common.scss
@@ -112,6 +112,10 @@ a.a-red {
   color: $color-silvery-gray;
 }
 
+.bold {
+  font-weight: bold;
+}
+
 .color-text-gray {
   color: $color-text-gray;
 }
